# python_webapp

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  add-dependency.sh  app.py  bk.main.py  config.py  docker-compose.yml  extensions.py  main.py  models.py  plan.txt  pyproject.toml  requirements.txt  routes.py  run.py  run_script.sh  test.py
models/: quote.py
my_app/: README.md  __init__.py  extensions.py  models.py  routes.py  structure.txt
my_app/auth/: routes.py
my_app/main/: routes.py
my_app/models/: __init__.py  contact_message.py  quote.py  user.py
my_app/quotes/: routes.py
my_app/templates/: about.html  add_quote.html  base.html  contact.html  dashboard.html  index.html  leadership.html  login.html  signup.html
templates/: add_quote.html  base.html  contact.html  dashboard.html  email_template.html  login.html  signup.html
