[project]
name = "python-webapp"
version = "0.1.0"
description = "Initial Project"
authors = [
    {name = "Ricky Kennedy", email = "rickykennedy.development@gmail.com"}
]
readme = "README.md"
packages = [{include = "my_project"}]
package-mode = false  # <-- Add this line
requires-python = ">=3.12"
dependencies = [
    "flask-mail (>=0.10.0,<0.11.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "typing-extensions (>=4.14.1,<5.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

