#[project]
#name = "python_webapp"
#version = "0.1.0"
#description = "Initial Project"
#authors = [
#    {name = "Ricky Kennedy", email = "rickykennedy.development@gmail.com"}
#]
#readme = "README.md"
#packages = [{include = "my_project"}]
##package-mode = false  # <-- Add this line
#requires-python = ">=3.12"
#dependencies = [
#    "flask-mail (>=0.10.0,<0.11.0)",
#    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
#    "sqlalchemy (>=2.0.41,<3.0.0)",
#    "blinker (>=1.9.0,<2.0.0)",
#    "click (>=8.2.1,<9.0.0)",
#    "flask (>=3.1.1,<4.0.0)",
#    "greenlet (>=3.2.3,<4.0.0)",
#    "itsdangerous (>=2.2.0,<3.0.0)",
#    "jinja2 (>=3.1.6,<4.0.0)",
#    "markupsafe (>=3.0.2,<4.0.0)",
#    "typing-extensions (>=4.14.1,<5.0.0)",
#    "werkzeug (>=3.1.3,<4.0.0)",
#    "psycopg2-binary (>=2.9.10,<3.0.0)",
#    "python-dotenv (>=1.1.1,<2.0.0)"
#]
#
#
#[build-system]
#requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-webapp"         # This is the project name, not the package
version = "0.1.0"
description = "A web application built with Python"
authors = [
    "Ricky Kennedy, rickykennedy.development@gmail.com"
]
readme = "README.md"
packages = [{ include = "my_app" }]   # This is the actual package

[tool.poetry.dependencies]
python = "^3.11"
# Example dependencies — replace with what you actually use
flask = "2.3.3"
python-dotenv = "1.1.1"
sqlalchemy = "2.0.41"
gunicorn = "21.2.0"
black = "25.1.0"
blinker = "1.9.0"
click = "8.2.1"
flake8 = "7.3.0"
flask-mail = "0.10.0"
flask-sqlalchemy = "3.1.1"
greenlet = "3.2.3"
iniconfig = "2.1.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
markupsafe = "3.0.2"
mccabe = "0.7.0"
mypy-extensions = "1.1.0"
packaging = "25.0"
pathspec = "0.12.1"
platformdirs = "4.3.8"
pluggy = "1.6.0"
psycopg2-binary = "2.9.10"
pycodestyle = "2.14.0"
pyflakes = "3.4.0"
pygments = "2.19.2"
pytest = "8.4.1"
typing-extensions = "4.14.1"
werkzeug = "3.1.3"
flask-login = "^0.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.0"

[tool.poetry.scripts]
run-webapp = "run:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"